update content and data

--- a/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
@@ -1,10 +1,10 @@
-id: 4564028103
+id: 9764723495
 type: node
-latitude: -16.51944
-longitude: -68.15124
+latitude: -16.52418
+longitude: -68.15674
 postcode: ""
 city: Ciudad Satélite
-street: Calle Nuñez del Prado
+street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
 opening_hours: ""
