--- a/data/cities/cochabamba/casael.yml
+++ b/data/cities/cochabamba/casael.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Calle Santivañez
 housenumber: ""
-phone: "78745247"
+phone: +591 78745247
 opening_hours: ""
 website: ""
