--- a/data/cities/cochabamba/herbalife.yml
+++ b/data/cities/cochabamba/herbalife.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Avenida Salamanca
 housenumber: "964"
-phone: ""
+phone: 901105110;+591 3 3146008;+591 71301060
 opening_hours: Mo-Fr 09:00-17:00; Sa 09:00-13:00
-website: ""
+website: https://www.herbalife.com.bo/
