--- a/data/cities/cochabamba/jhosue-system-pc.yml
+++ b/data/cities/cochabamba/jhosue-system-pc.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Calle Colombia
 housenumber: "789"
-phone: "71771302"
+phone: +591 71771302
 opening_hours: Mo-Sa 09:00-13:00, 15:30-19:40
-website: https://web.facebook.com/jhosuesystempc/?ref=page_internal
+website: ""
