--- a/data/cities/cochabamba/multi-marcas-myv2.yml
+++ b/data/cities/cochabamba/multi-marcas-myv2.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Miamicito La Cancha
 housenumber: Local 13-3
-phone: (4) 4228296
+phone: +591 4 4228296;+591 70728142
 opening_hours: ""
 website: ""
