--- a/data/cities/cochabamba/oba.yml
+++ b/data/cities/cochabamba/oba.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Avenida Uyuni
 housenumber: ""
-phone: ""
+phone: +591 79962034
 opening_hours: ""
 website: ""
