--- a/data/cities/cochabamba/sanbin-automotriz.yml
+++ b/data/cities/cochabamba/sanbin-automotriz.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Avenida 6 de Agosto
 housenumber: ""
-phone: ;+591 72277393;+591 76438007;+591 72272219;+591 77409877;+591 75971086
+phone: +591 72277393;+591 76438007;+591 72272219;+591 77409877;+591 75971086
 opening_hours: ""
 website: ""
