--- a/data/cities/cochabamba/sofia-al-paso.yml
+++ b/data/cities/cochabamba/sofia-al-paso.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Calle Irigoyen
 housenumber: "1951"
-phone: ""
+phone: "800124141"
 opening_hours: Mo-Sa 08:00-20:00, Su 08:00-13:00
-website: ""
+website: https://sofia.com.bo/sofia-al-paso/
