--- a/data/cities/cochabamba/viajes-tejada.yml
+++ b/data/cities/cochabamba/viajes-tejada.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Calle 25 de Mayo
 housenumber: "131"
-phone: +591 4 4225169
+phone: +591 4 4225169;+591 72220230
 opening_hours: 08:30-12:30,14:30-19:00
 website: ""
