update content and data

--- a/data/cities/santa-cruz-de-la-sierra/tecnillantas-del-oriente.yml
+++ b/data/cities/santa-cruz-de-la-sierra/tecnillantas-del-oriente.yml
@@ -1,10 +1,10 @@
-id: 4401492508
+id: 440374103
 type: node
-latitude: -17.75775
-longitude: -63.17876
+latitude: -17.76674
+longitude: -63.15857
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Tercer Anillo Externo
+street: Tercer Anillo Interno
 housenumber: ""
 phone: ""
 opening_hours: ""
