--- a/data/cities/sucre/la-pacena.yml
+++ b/data/cities/sucre/la-pacena.yml
@@ -4,8 +4,8 @@ latitude: -19.03396
 longitude: -65.25285
 postcode: ""
 city: Sucre
-street: guillermo loayza
+street: Calle Guillermo Loayza
 housenumber: "568"
-phone: "74401555"
+phone: +591 74401555
 opening_hours: 24/7
 website: ""
