--- a/data/cities/ciudad-satelite/libreria-bazar-calle-32-b.yml
+++ b/data/cities/ciudad-satelite/libreria-bazar-calle-32-b.yml
@@ -1,10 +1,10 @@
-id: 7546680377
+id: 7603977594
 type: node
-latitude: -16.52231
-longitude: -68.15271
+latitude: -16.53077
+longitude: -68.15673
 postcode: ""
 city: Ciudad Satélite
-street: Calle Nuñez del Prado
+street: Calle 32 B
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 09:00-18:00
