--- a/data/cities/la-paz/ketal.yml
+++ b/data/cities/la-paz/ketal.yml
@@ -1,11 +1,11 @@
-id: 1446556315
+id: 1208365165
 type: node
-latitude: -16.51056
-longitude: -68.12343
+latitude: -16.53931
+longitude: -68.08393
 postcode: ""
 city: La Paz
-street: Avenida Arce
+street: Calle 15
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 07:30-22:00; Su 08:00-22:00
+opening_hours: Mo-Su 09:00-22:00
 website: ""
