update content and data

--- a/data/cities/ciudad-satelite/tienda-de-barrio-calle-nunez-del-prado.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-calle-nunez-del-prado.yml
@@ -1,10 +1,10 @@
-id: 8346432152
+id: 4564028103
 type: node
-latitude: -16.52776
-longitude: -68.15141
+latitude: -16.51944
+longitude: -68.15124
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
+street: Calle Nuñez del Prado
 housenumber: ""
 phone: ""
 opening_hours: ""
