update content and data

--- a/data/cities/cochabamba/auto-group.yml
+++ b/data/cities/cochabamba/auto-group.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: Avenida América
 housenumber: "877"
 phone: +591 4 4457777
-opening_hours: Mo-Fr 09:00-13:00,14:00-19:00; Sa 09:00-16:00; Su 09:00-13:00
+opening_hours: Mo-Fr 09:00-13:00,14:00-19:00; Sa 09:00-16:00; Su 09:00-13:00; PH Off
 website: http://www.autogroup.com.bo/
