--- a/data/cities/cochabamba/comercial-cardel.yml
+++ b/data/cities/cochabamba/comercial-cardel.yml
@@ -1,10 +1,10 @@
-id: 4318911215
+id: 12478975088
 type: node
-latitude: -17.39316
-longitude: -66.17403
+latitude: -17.37216
+longitude: -66.17095
 postcode: ""
 city: Cochabamba
-street: Calle Francisco Pizarro
+street: Avenida América
 housenumber: ""
 phone: ""
 opening_hours: ""
