--- a/data/cities/cochabamba/fabulous-boutique.yml
+++ b/data/cities/cochabamba/fabulous-boutique.yml
@@ -1,11 +1,11 @@
-id: 8164208618
+id: 12478975060
 type: node
-latitude: -17.37215
-longitude: -66.17081
+latitude: -17.37193
+longitude: -66.16886
 postcode: ""
 city: Cochabamba
 street: Avenida América
 housenumber: ""
-phone: ""
+phone: +591 67545647
 opening_hours: ""
 website: ""
