--- a/data/cities/cochabamba/libertad-carnes.yml
+++ b/data/cities/cochabamba/libertad-carnes.yml
@@ -1,10 +1,10 @@
-id: 9076411837
+id: 12478975072
 type: node
-latitude: -17.38782
-longitude: -66.15643
+latitude: -17.3719
+longitude: -66.16953
 postcode: ""
 city: Cochabamba
-street: ""
+street: Avenida América
 housenumber: ""
 phone: ""
 opening_hours: ""
