--- a/data/cities/cochabamba/almanza.yml
+++ b/data/cities/cochabamba/almanza.yml
@@ -5,7 +5,7 @@ longitude: -66.15629
 postcode: ""
 city: Cochabamba
 street: Avenida José Ballivián
-housenumber: ""
+housenumber: "0517"
 phone: ""
 opening_hours: ""
 website: ""
