--- a/data/cities/cochabamba/baupercar-2.yml
+++ b/data/cities/cochabamba/baupercar-2.yml
@@ -1,9 +1,9 @@
-id: 11695574219
+id: 3636046995
 type: node
-latitude: -16.16546
-longitude: -69.08784
+latitude: -17.39811
+longitude: -66.15435
 postcode: ""
-city: Copacabana
+city: Cochabamba
 street: ""
 housenumber: ""
 phone: ""
