--- a/data/cities/cochabamba/festimania.yml
+++ b/data/cities/cochabamba/festimania.yml
@@ -1,10 +1,10 @@
-id: 3552731012
+id: 12478975090
 type: node
-latitude: -17.38575
-longitude: -66.18562
+latitude: -17.37217
+longitude: -66.17085
 postcode: ""
 city: Cochabamba
-street: Avenida d'Orbigny
+street: Avenida América
 housenumber: ""
 phone: ""
 opening_hours: ""
