--- a/data/cities/cochabamba/master-motors.yml
+++ b/data/cities/cochabamba/master-motors.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Avenida América
 housenumber: "715"
-phone: +591 4 4117052
-opening_hours: ""
+phone: +591 4 4281411
+opening_hours: Mo-Fr 08:00-12:00,14:00-18:00; Sa 08:00-12:00; Su,PH Off
 website: ""
