--- a/data/cities/cochabamba/vive-sano-sin-gluten.yml
+++ b/data/cities/cochabamba/vive-sano-sin-gluten.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: Calle Mariano Antezana
 housenumber: "332"
 phone: +591 70785508
-opening_hours: Mo-Sa 09:30-19:00
+opening_hours: Mo-Fr 09:30-19:00; Sa 08:30-16:00; Su,PH Off
 website: ""
