update content and data

--- a/data/cities/cochabamba/aditec.yml
+++ b/data/cities/cochabamba/aditec.yml
@@ -1,11 +1,11 @@
-id: 9577056933
+id: 1352470162
 type: node
-latitude: -17.40187
-longitude: -66.17323
+latitude: -17.40184
+longitude: -66.17329
 postcode: ""
 city: Cochabamba
 street: Calle Hernan Morales
 housenumber: "1000"
-phone: ""
+phone: +591 4 4449977;+591 4449978
 opening_hours: ""
-website: ""
+website: https://www.aditec-aditivos.com/
