--- a/data/cities/cochabamba/centro-de-servicios-coboce.yml
+++ b/data/cities/cochabamba/centro-de-servicios-coboce.yml
@@ -4,7 +4,7 @@ latitude: -17.37199
 longitude: -66.16257
 postcode: ""
 city: Cochabamba
-street: Avenida Libertador Simón Bolivar
+street: Avenida Libertador Simón Bolívar
 housenumber: ""
 phone: ""
 opening_hours: ""
