--- a/data/cities/cochabamba/supermercado-america.yml
+++ b/data/cities/cochabamba/supermercado-america.yml
@@ -1,11 +1,11 @@
-id: 1684069048
+id: 4143771666
 type: node
-latitude: -17.37237
-longitude: -66.16198
+latitude: -17.37663
+longitude: -66.17521
 postcode: ""
 city: Cochabamba
-street: Avenida América
-housenumber: E-0131
-phone: +591 4 4249127
+street: Avenida Juan de la Rosa
+housenumber: ""
+phone: ""
 opening_hours: Mo-Sa 08:00-22:00; Su,PH 09:00-13:00
-website: https://www.supermercadoamerica.com.bo/
+website: ""
