update content and data

--- a/data/cities/ciudad-satelite/venta-de-ropa-avenida-satelite.yml
+++ b/data/cities/ciudad-satelite/venta-de-ropa-avenida-satelite.yml
@@ -1,10 +1,10 @@
-id: 8346432152
+id: 4400066933
 type: node
-latitude: -16.52776
-longitude: -68.15141
+latitude: -16.52461
+longitude: -68.14964
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
+street: Avenida Satélite
 housenumber: ""
 phone: ""
 opening_hours: ""
