--- a/data/cities/cochabamba/boleteria.yml
+++ b/data/cities/cochabamba/boleteria.yml
@@ -1,10 +1,10 @@
-id: 4995781925
+id: 2528889341
 type: node
-latitude: -17.38055
-longitude: -66.15886
+latitude: -17.39877
+longitude: -66.17417
 postcode: ""
 city: Cochabamba
-street: Calle Oblitas
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: ""
