--- a/data/cities/ciudad-satelite/libreria-bazar-calle-32-b.yml
+++ b/data/cities/ciudad-satelite/libreria-bazar-calle-32-b.yml
@@ -1,11 +1,11 @@
-id: 4548572052
+id: 7603977594
 type: node
-latitude: -16.52575
-longitude: -68.15055
+latitude: -16.53077
+longitude: -68.15673
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hno. E. Morales
+street: Calle 32 B
 housenumber: ""
-phone: +591 70146392
+phone: ""
 opening_hours: Mo-Sa 09:00-18:00
 website: ""
