--- a/data/cities/ciudad-satelite/de-todo-market.yml
+++ b/data/cities/ciudad-satelite/de-todo-market.yml
@@ -7,5 +7,5 @@ city: Ciudad Satélite
 street: Avenida del Policía
 housenumber: "144"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-22:00; Su 11:30-21:00
 website: ""
