--- a/data/cities/santa-cruz-de-la-sierra/ferreteria-el-tajibo.yml
+++ b/data/cities/santa-cruz-de-la-sierra/ferreteria-el-tajibo.yml
@@ -1,10 +1,10 @@
-id: 441302316
+id: 12563588727
 type: node
-latitude: -17.78568
-longitude: -63.20416
+latitude: -17.78727
+longitude: -63.20465
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida Roca y Coronado
+street: Tercer Anillo Interno
 housenumber: ""
 phone: ""
 opening_hours: ""
