update content and data

--- a/data/cities/ciudad-satelite/tienda-de-variedades-avenida-jose-agustin-4.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-avenida-jose-agustin-4.yml
@@ -1,11 +1,11 @@
-id: 7524718132
+id: 7561034580
 type: node
-latitude: -16.52858
-longitude: -68.15038
+latitude: -16.53022
+longitude: -68.15133
 postcode: ""
 city: Ciudad Satélite
 street: Avenida José Agustín
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 09:00-18:00
+opening_hours: ""
 website: ""
