--- a/data/cities/la-paz/bustillo-sob.yml
+++ b/data/cities/la-paz/bustillo-sob.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: La Paz
 street: Avenida Perú
 housenumber: ""
-phone: +591 69571491
+phone: +591 69571491;+591 2 2282269
 opening_hours: ""
 website: ""
