--- a/data/cities/ciudad-satelite/electro-sam.yml
+++ b/data/cities/ciudad-satelite/electro-sam.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Ciudad Satélite
 street: Avenida Panoramica
 housenumber: ""
-phone: "+59178778733"
+phone: +59178778733;+59169807203
 opening_hours: ""
 website: ""
