update content and data

--- a/data/cities/cochabamba/h-y-s.yml
+++ b/data/cities/cochabamba/h-y-s.yml
@@ -1,10 +1,10 @@
-id: 8597535066
+id: 4615686238
 type: node
-latitude: -17.39153
-longitude: -66.15798
+latitude: -17.38804
+longitude: -66.15757
 postcode: ""
 city: Cochabamba
-street: Calle Mariano Baptista
+street: Calle México
 housenumber: ""
 phone: ""
 opening_hours: ""
