--- a/data/cities/ciudad-satelite/chulada-moda-y-estilo.yml
+++ b/data/cities/ciudad-satelite/chulada-moda-y-estilo.yml
@@ -1,10 +1,10 @@
-id: 8346432152
+id: 4399866106
 type: node
-latitude: -16.52776
-longitude: -68.15141
+latitude: -16.52678
+longitude: -68.14831
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
+street: Avenida Alfredo Sanjines
 housenumber: ""
 phone: ""
 opening_hours: ""
