--- a/data/cities/ciudad-satelite/venta-de-ropa-calle-hno-e-morales.yml
+++ b/data/cities/ciudad-satelite/venta-de-ropa-calle-hno-e-morales.yml
@@ -1,11 +1,11 @@
-id: 7575530305
+id: 4548572052
 type: node
-latitude: -16.52632
-longitude: -68.15394
+latitude: -16.52575
+longitude: -68.15055
 postcode: ""
 city: Ciudad Satélite
-street: Calle 25-B
+street: Calle Hno. E. Morales
 housenumber: ""
-phone: ""
+phone: +591 70146392
 opening_hours: Mo-Sa 09:00-18:00
 website: ""
