--- a/data/cities/cochabamba/libreria-avenida-manuel-isidoro-belzu.yml
+++ b/data/cities/cochabamba/libreria-avenida-manuel-isidoro-belzu.yml
@@ -1,10 +1,10 @@
-id: 5219020327
+id: 8614022841
 type: node
-latitude: -17.37512
-longitude: -66.1493
+latitude: -17.39799
+longitude: -66.13986
 postcode: ""
 city: Cochabamba
-street: Calle Zenon Salinas
+street: Avenida Manuel Isidoro Belzu
 housenumber: ""
 phone: ""
 opening_hours: ""
