--- a/data/cities/santa-cruz-de-la-sierra/wow-avenida-roca-y-coronado.yml
+++ b/data/cities/santa-cruz-de-la-sierra/wow-avenida-roca-y-coronado.yml
@@ -1,10 +1,10 @@
-id: 4394915415
+id: 441302316
 type: node
-latitude: -17.78233
-longitude: -63.18377
+latitude: -17.78568
+longitude: -63.20416
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Calle 21 de Mayo
+street: Avenida Roca y Coronado
 housenumber: ""
 phone: ""
 opening_hours: ""
