update content and data

--- a/data/cities/ciudad-satelite/odontology-plus.yml
+++ b/data/cities/ciudad-satelite/odontology-plus.yml
@@ -4,7 +4,7 @@ latitude: -16.52342
 longitude: -68.15125
 postcode: ""
 city: Ciudad Satélite
-street: Calle Arturo Ballivian Otero
+street: Calle 12-Arturo Ballivian Otero
 housenumber: ""
 phone: ""
 opening_hours: ""
