update content and data

--- a/data/cities/cochabamba/cala-cala.yml
+++ b/data/cities/cochabamba/cala-cala.yml
@@ -1,10 +1,10 @@
-id: 8614022841
+id: 4728105050
 type: node
-latitude: -17.39799
-longitude: -66.13986
+latitude: -17.36893
+longitude: -66.1639
 postcode: ""
 city: Cochabamba
-street: Avenida Manuel Isidoro Belzu
+street: Avenida Libertador Simón Bolivar
 housenumber: ""
 phone: ""
 opening_hours: ""
