--- a/data/cities/tiquipaya/taller-de-motos-tiquipaya.yml
+++ b/data/cities/tiquipaya/taller-de-motos-tiquipaya.yml
@@ -1,10 +1,10 @@
-id: 7399711341
+id: 12639791581
 type: node
-latitude: -17.33713
-longitude: -66.22074
+latitude: -17.33785
+longitude: -66.22348
 postcode: ""
 city: Tiquipaya
-street: Avenida Reducto
+street: Calle Río Tolavi
 housenumber: ""
 phone: ""
 opening_hours: ""
