--- a/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
+++ b/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
@@ -1,10 +1,10 @@
-id: 12544889638
+id: 8597535066
 type: node
-latitude: -17.44775
-longitude: -66.12538
+latitude: -17.39153
+longitude: -66.15798
 postcode: ""
 city: Cochabamba
-street: Avenida Siglo XX
+street: Calle Mariano Baptista
 housenumber: ""
 phone: ""
 opening_hours: ""
