--- a/data/cities/tiquipaya/alimentos-integrales-semilla.yml
+++ b/data/cities/tiquipaya/alimentos-integrales-semilla.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tiquipaya
 street: Calle Pablo Jaimes
 housenumber: ""
-phone: +591-63925020
-opening_hours: ""
+phone: +591 63925020
+opening_hours: Mo-Fr 09:00-21:00; Sa 09:00-20:00; Su 08:00-14:00
 website: ""
