--- a/data/cities/tiquipaya/panaderia-trojes.yml
+++ b/data/cities/tiquipaya/panaderia-trojes.yml
@@ -1,10 +1,10 @@
-id: 7399711341
+id: 12639797749
 type: node
-latitude: -17.33713
-longitude: -66.22074
+latitude: -17.34545
+longitude: -66.20359
 postcode: ""
 city: Tiquipaya
-street: Avenida Reducto
+street: Avenida Ecológica
 housenumber: ""
 phone: ""
 opening_hours: ""
