update content and data

--- a/data/cities/cochabamba/bujes-de-goma-chambi.yml
+++ b/data/cities/cochabamba/bujes-de-goma-chambi.yml
@@ -1,10 +1,10 @@
-id: 8597535066
+id: 8015424208
 type: node
-latitude: -17.39153
-longitude: -66.15798
+latitude: -17.39869
+longitude: -66.16632
 postcode: ""
 city: Cochabamba
-street: Calle Mariano Baptista
+street: Avenida Manco Kapac
 housenumber: ""
 phone: ""
 opening_hours: ""
