--- a/data/cities/cochabamba/hipermaxi-avenida-juan-de-la-rosa.yml
+++ b/data/cities/cochabamba/hipermaxi-avenida-juan-de-la-rosa.yml
@@ -8,4 +8,4 @@ street: Avenida Juan de la Rosa
 housenumber: ""
 phone: +591 4 4417448;+591 4 4417447
 opening_hours: ""
-website: https://hipermaxi.com/
+website: https://www.hipermaxi.com/cochabamba/hipermaxi-juan-de-la-rosa
