update content and data

--- a/data/cities/julaca/el-khochalo.yml
+++ b/data/cities/julaca/el-khochalo.yml
@@ -1,9 +1,9 @@
-id: 8241198633
+id: 5042909121
 type: node
-latitude: -17.39896
-longitude: -66.15265
+latitude: -20.91163
+longitude: -67.56657
 postcode: ""
-city: Cochabamba
+city: Julaca
 street: ""
 housenumber: ""
 phone: ""
