--- a/data/cities/cochabamba/kiosco-bitcoin.yml
+++ b/data/cities/cochabamba/kiosco-bitcoin.yml
@@ -4,8 +4,8 @@ latitude: -17.37519
 longitude: -66.14907
 postcode: ""
 city: Cochabamba
-street: ""
+street: Calle Zenon Salinas
 housenumber: ""
-phone: "+59169414845"
+phone: +591 69414845
 opening_hours: 24/7
-website: kiosco.bitcoin.org.bo
+website: https://kiosco.bitcoin.org.bo/
