update content and data

--- a/data/cities/el-alto/club-pastel.yml
+++ b/data/cities/el-alto/club-pastel.yml
@@ -1,11 +1,11 @@
 id: 866986286
 type: node
-latitude: -16.4968
-longitude: -68.17817
+latitude: -16.49686
+longitude: -68.17818
 postcode: ""
 city: El Alto
 street: Calle Arturo Valle
-housenumber: ""
+housenumber: "265"
 phone: 591 6980818
 opening_hours: Mo-Su 08:00-22:00
 website: ""
