--- a/data/cities/cochabamba/todo-goma.yml
+++ b/data/cities/cochabamba/todo-goma.yml
@@ -5,7 +5,7 @@ longitude: -66.15402
 postcode: ""
 city: Cochabamba
 street: Calle José Miguel Lanza
-housenumber: "424"
+housenumber: N0424
 phone: ""
 opening_hours: ""
 website: ""
