--- a/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
@@ -1,10 +1,10 @@
-id: 7546680377
+id: 7618663236
 type: node
-latitude: -16.52231
-longitude: -68.15271
+latitude: -16.53028
+longitude: -68.15924
 postcode: ""
 city: Ciudad Satélite
-street: Calle Nuñez del Prado
+street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 09:00-18:00
