--- a/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
@@ -1,10 +1,10 @@
-id: 9362453550
+id: 9784032962
 type: node
-latitude: -16.5276
-longitude: -68.14851
+latitude: -16.52663
+longitude: -68.15765
 postcode: ""
 city: Ciudad Satélite
-street: Avenida del Policía
+street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
 opening_hours: ""
