--- a/data/cities/tiquipaya/carniceria-toro-criollo.yml
+++ b/data/cities/tiquipaya/carniceria-toro-criollo.yml
@@ -1,11 +1,11 @@
-id: 6909809628
+id: 6909809627
 type: node
-latitude: -17.33655
-longitude: -66.21915
-postcode: CBA
+latitude: -17.33657
+longitude: -66.21908
+postcode: ""
 city: Tiquipaya
 street: Calle Toribio Torrico
 housenumber: ""
-phone: ""
+phone: +591-79335751
 opening_hours: ""
 website: ""
