update content and data

--- a/data/cities/cochabamba/baupercar-avenida-dorbigny.yml
+++ b/data/cities/cochabamba/baupercar-avenida-dorbigny.yml
@@ -1,10 +1,10 @@
-id: 12544889638
+id: 3552731012
 type: node
-latitude: -17.44775
-longitude: -66.12538
+latitude: -17.38575
+longitude: -66.18562
 postcode: ""
 city: Cochabamba
-street: Avenida Siglo XX
+street: Avenida d'Orbigny
 housenumber: ""
 phone: ""
 opening_hours: ""
