--- a/data/cities/cochabamba/el-bosque-comercial.yml
+++ b/data/cities/cochabamba/el-bosque-comercial.yml
@@ -1,10 +1,10 @@
-id: 3636046995
+id: 563932391
 type: node
-latitude: -17.39811
-longitude: -66.15435
+latitude: -17.34706
+longitude: -66.18333
 postcode: ""
 city: Cochabamba
-street: ""
+street: Avenida Centenario
 housenumber: ""
 phone: ""
 opening_hours: ""
