--- a/data/cities/cochabamba/ambar.yml
+++ b/data/cities/cochabamba/ambar.yml
@@ -5,7 +5,7 @@ longitude: -66.14592
 postcode: ""
 city: Cochabamba
 street: Calle Antonio Quijarro
-housenumber: ""
-phone: ""
-opening_hours: ""
+housenumber: "1747"
+phone: "+59176479000"
+opening_hours: Mo-Fr 09:00-17:00
 website: ""
