update content and data

--- a/data/cities/cochabamba/eba-express.yml
+++ b/data/cities/cochabamba/eba-express.yml
@@ -1,11 +1,11 @@
-id: 4582125300
+id: 11098456179
 type: node
-latitude: -17.38308
-longitude: -66.15879
+latitude: -17.38287
+longitude: -66.15894
 postcode: ""
 city: Cochabamba
 street: Avenida José Ballivián
-housenumber: "848"
-phone: +591 72710005
+housenumber: "4913"
+phone: ""
 opening_hours: ""
 website: ""
