--- a/data/cities/cochabamba/supermarket-vial.yml
+++ b/data/cities/cochabamba/supermarket-vial.yml
@@ -1,10 +1,10 @@
-id: 4106074973
+id: 12798728823
 type: node
-latitude: -17.38665
-longitude: -66.15073
+latitude: -17.38163
+longitude: -66.155
 postcode: ""
 city: Cochabamba
-street: Avenida Oquendo
+street: Avenida Ramón Rivero
 housenumber: ""
 phone: ""
 opening_hours: ""
