--- a/data/cities/cochabamba/fantastic-by-jenth.yml
+++ b/data/cities/cochabamba/fantastic-by-jenth.yml
@@ -1,10 +1,10 @@
-id: 4607123125
+id: 9920363689
 type: node
-latitude: -17.38582
-longitude: -66.15681
+latitude: -17.39069
+longitude: -66.14912
 postcode: ""
 city: Cochabamba
-street: Avenida José Ballivián
+street: Avenida Heroínas
 housenumber: ""
 phone: ""
 opening_hours: ""
