--- a/data/cities/cochabamba/pet-loved.yml
+++ b/data/cities/cochabamba/pet-loved.yml
@@ -1,10 +1,10 @@
-id: 8614447799
+id: 9565672292
 type: node
-latitude: -17.39819
-longitude: -66.13704
+latitude: -17.38912
+longitude: -66.14663
 postcode: ""
 city: Cochabamba
-street: Avenida 9 de Abril
+street: Calle Colombia
 housenumber: ""
 phone: ""
 opening_hours: ""
