--- a/data/cities/cochabamba/ic-norte.yml
+++ b/data/cities/cochabamba/ic-norte.yml
@@ -1,11 +1,11 @@
-id: 998666950
+id: 1052897920
 type: node
-latitude: -17.38826
-longitude: -66.18026
+latitude: -17.37313
+longitude: -66.15084
 postcode: ""
 city: Cochabamba
-street: Avenida d'Orbigny
-housenumber: ""
-phone: +591 4 4244969;+591 4 4403040;+591 61678953
-opening_hours: Mo-Sa 07:00-22:30
-website: https://www.icnorte.com/
+street: Avenida América
+housenumber: E-0817
+phone: +591 4 4240575;+591 4 4247951;+591 61675624
+opening_hours: Mo-Su 08:00-22:00
+website: ""
