update content and data

--- a/data/cities/cochabamba/veterinaria-garfield.yml
+++ b/data/cities/cochabamba/veterinaria-garfield.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Avenida Aniceto Arce
 housenumber: "522"
-phone: ""
+phone: +591 4 4539376;+591 72289684
 opening_hours: ""
 website: ""
