update content and data

--- a/data/cities/la-paz/fotocopias.yml
+++ b/data/cities/la-paz/fotocopias.yml
@@ -1,10 +1,10 @@
-id: 9041964213
+id: 10972348971
 type: node
-latitude: -16.52073
-longitude: -68.14677
+latitude: -16.53808
+longitude: -68.07097
 postcode: ""
 city: La Paz
-street: Avenida Marcelo Quiroga Santa Cruz
+street: Calle 26
 housenumber: ""
 phone: ""
 opening_hours: ""
