--- a/data/cities/ciudad-satelite/tienda-de-variedades-avenida-ciudad-satelite-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-avenida-ciudad-satelite-2.yml
@@ -1,11 +1,11 @@
-id: 7495698703
+id: 7495698708
 type: node
-latitude: -16.52202
-longitude: -68.15607
+latitude: -16.52205
+longitude: -68.156
 postcode: ""
 city: Ciudad Satélite
 street: Avenida Ciudad Satélite
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-18:00
 website: ""
