--- a/data/cities/cochabamba/el-roble-systems.yml
+++ b/data/cities/cochabamba/el-roble-systems.yml
@@ -1,11 +1,11 @@
 id: 4932410421
 type: node
-latitude: -17.36805
-longitude: -66.14762
+latitude: -17.36602
+longitude: -66.15843
 postcode: ""
 city: Cochabamba
-street: Calle José Quezada
-housenumber: "1148"
-phone: +591 4 4423892
-opening_hours: Mo-Sa 09:00-18:00
+street: Avenida Circunvalación
+housenumber: ""
+phone: +591 70756284
+opening_hours: Mo-Sa 09:00-18:30
 website: http://www.roblesystems.com
