--- a/data/cities/el-alto/tienda-de-barrio-avenida-escalona-y-aguero.yml
+++ b/data/cities/el-alto/tienda-de-barrio-avenida-escalona-y-aguero.yml
@@ -1,10 +1,10 @@
-id: 4564028118
+id: 4545693361
 type: node
-latitude: -16.51866
-longitude: -68.15534
+latitude: -16.52678
+longitude: -68.15789
 postcode: ""
 city: El Alto
-street: Calle 14
+street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
 opening_hours: ""
