update content and data

--- a/data/cities/cochabamba/kiosco-bitcoin.yml
+++ b/data/cities/cochabamba/kiosco-bitcoin.yml
@@ -8,4 +8,4 @@ street: Calle Zenon Salinas
 housenumber: ""
 phone: +591 69414845
 opening_hours: 24/7
-website: https://kiosco.bitcoin.org.bo/
+website: https://www.bitcoin.org.bo/
