--- a/data/cities/la-paz/fotocopias.yml
+++ b/data/cities/la-paz/fotocopias.yml
@@ -1,10 +1,10 @@
-id: 10972348971
+id: 10949390924
 type: node
-latitude: -16.53808
-longitude: -68.07097
+latitude: -16.4924
+longitude: -68.13488
 postcode: ""
 city: La Paz
-street: Calle 26
+street: Avenida Sucre
 housenumber: ""
 phone: ""
 opening_hours: ""
