update content and data

--- a/data/cities/el-alto/tienda-de-barrio-avenida-julio-cesar-valdez.yml
+++ b/data/cities/el-alto/tienda-de-barrio-avenida-julio-cesar-valdez.yml
@@ -1,10 +1,10 @@
-id: 7700875056
+id: 13141225059
 type: node
-latitude: -16.51926
-longitude: -68.15464
+latitude: -16.5411
+longitude: -68.23107
 postcode: ""
 city: El Alto
-street: Avenida Escalona y Aguero
+street: Avenida Julio Cesar Valdez
 housenumber: ""
 phone: ""
 opening_hours: ""
