update content and data

--- a/data/cities/cochabamba/baupercar-2.yml
+++ b/data/cities/cochabamba/baupercar-2.yml
@@ -1,10 +1,10 @@
-id: 8597535066
+id: 3636046995
 type: node
-latitude: -17.39153
-longitude: -66.15798
+latitude: -17.39811
+longitude: -66.15435
 postcode: ""
 city: Cochabamba
-street: Calle Mariano Baptista
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: ""
