--- a/data/cities/cochabamba/la-dietetica.yml
+++ b/data/cities/cochabamba/la-dietetica.yml
@@ -1,11 +1,11 @@
-id: 10690211575
+id: 10690211576
 type: node
-latitude: -17.38804
-longitude: -66.15767
+latitude: -17.37258
+longitude: -66.16487
 postcode: ""
 city: Cochabamba
-street: Calle México
-housenumber: "286"
+street: Avenida América
+housenumber: ""
 phone: +591 63843380
-opening_hours: Mo-Th 09:00-19:30; Fr 09:00-18:00
+opening_hours: Mo-Th 09:00-12:30,15:30-20:00; Fr 09:00-12:30,15:30-18:00
 website: ""
