--- a/data/cities/la-paz/fotocopias-calle-26.yml
+++ b/data/cities/la-paz/fotocopias-calle-26.yml
@@ -1,10 +1,10 @@
-id: 8258244948
+id: 10972348971
 type: node
-latitude: -16.54403
-longitude: -68.09251
+latitude: -16.53808
+longitude: -68.07097
 postcode: ""
 city: La Paz
-street: Avenida Costanera
+street: Calle 26
 housenumber: ""
 phone: ""
 opening_hours: ""
