--- a/data/cities/la-paz/boleteria-2.yml
+++ b/data/cities/la-paz/boleteria-2.yml
@@ -1,10 +1,10 @@
-id: 10949390924
+id: 8127217101
 type: node
-latitude: -16.4924
-longitude: -68.13488
+latitude: -16.50273
+longitude: -68.12498
 postcode: ""
 city: La Paz
-street: Avenida Sucre
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: ""
