update content and data

--- a/data/cities/cochabamba/gomeria-avenida-santa-vera-cruz.yml
+++ b/data/cities/cochabamba/gomeria-avenida-santa-vera-cruz.yml
@@ -1,10 +1,10 @@
-id: 9181444873
+id: 13165567843
 type: node
-latitude: -17.39072
-longitude: -66.15452
+latitude: -17.42634
+longitude: -66.17374
 postcode: ""
 city: Cochabamba
-street: Calle Colombia
+street: Avenida Santa Vera Cruz
 housenumber: ""
 phone: ""
 opening_hours: ""
