--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-29-c-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-29-c-2.yml
@@ -1,11 +1,11 @@
-id: 4548572052
+id: 4548572010
 type: node
-latitude: -16.52575
-longitude: -68.15055
+latitude: -16.53063
+longitude: -68.15232
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hno. E. Morales
+street: Calle 29 C
 housenumber: ""
-phone: +591 70146392
+phone: ""
 opening_hours: Mo-Sa 09:00-18:00
 website: ""
