update content and data

--- a/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
@@ -1,10 +1,10 @@
-id: 7573168877
+id: 9764723495
 type: node
-latitude: -16.53185
-longitude: -68.15317
+latitude: -16.52418
+longitude: -68.15674
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
+street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
 opening_hours: ""
