--- a/data/cities/cochabamba/alvaro-eid-makeup-studio.yml
+++ b/data/cities/cochabamba/alvaro-eid-makeup-studio.yml
@@ -1,11 +1,11 @@
 id: 6145518234
 type: node
-latitude: -17.36579
-longitude: -66.18944
+latitude: -17.37685
+longitude: -66.1556
 postcode: ""
 city: Cochabamba
-street: Avenida Segunda
-housenumber: ""
+street: Tomás Frias
+housenumber: "1353"
 phone: +591 77445770
 opening_hours: Mo-Sa 08:00-20:00; Su 08:00-19:00
 website: https://alvaroeid.com/
