--- a/data/cities/ciudad-satelite/tienda-de-variedades-arturo-ballivian-otero-5.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-arturo-ballivian-otero-5.yml
@@ -1,11 +1,11 @@
-id: 7463799150
+id: 7519635717
 type: node
-latitude: -16.52533
-longitude: -68.15207
+latitude: -16.53133
+longitude: -68.15456
 postcode: ""
 city: Ciudad Satélite
 street: Arturo Ballivian Otero
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-18:00
 website: ""
