--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-diego-de-portugal-4.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-diego-de-portugal-4.yml
@@ -1,11 +1,11 @@
-id: 7519600629
+id: 7597247676
 type: node
-latitude: -16.52997
-longitude: -68.15666
+latitude: -16.52676
+longitude: -68.15526
 postcode: ""
 city: Ciudad Satélite
 street: Calle Diego de Portugal
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 08:00-18:00
 website: ""
