--- a/data/cities/oruro/cimar-calle-leon.yml
+++ b/data/cities/oruro/cimar-calle-leon.yml
@@ -1,11 +1,11 @@
-id: 12849714835
+id: 1388653051
 type: node
-latitude: -17.96316
-longitude: -67.10861
+latitude: -17.96311
+longitude: -67.1087
 postcode: ""
 city: Oruro
 street: Calle León
 housenumber: "314"
 phone: +591 67204679
-opening_hours: Mo-Sa 08:00-18:00
+opening_hours: Mo-Su 08:00-20:00
 website: ""
