--- a/data/cities/ciudad-satelite/tienda-de-variedades-arturo-ballivian-otero-7.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-arturo-ballivian-otero-7.yml
@@ -1,11 +1,11 @@
-id: 7495733011
+id: 7463799150
 type: node
-latitude: -16.52775
-longitude: -68.15312
+latitude: -16.52533
+longitude: -68.15207
 postcode: ""
 city: Ciudad Satélite
 street: Arturo Ballivian Otero
 housenumber: ""
 phone: ""
-opening_hours: Mo-Fr 09:00-17:00
+opening_hours: ""
 website: ""
