update content and data

--- a/data/cities/la-paz/punto-y-estilo.yml
+++ b/data/cities/la-paz/punto-y-estilo.yml
@@ -1,10 +1,10 @@
-id: 10972348971
+id: 13235713218
 type: node
-latitude: -16.53808
-longitude: -68.07097
+latitude: -16.4971
+longitude: -68.14585
 postcode: ""
 city: La Paz
-street: Calle 26
+street: Calle Nataniel Aguirre
 housenumber: ""
 phone: ""
 opening_hours: ""
