--- a/data/cities/oruro/cimar.yml
+++ b/data/cities/oruro/cimar.yml
@@ -1,10 +1,10 @@
-id: 12849714835
+id: 12849582541
 type: node
-latitude: -17.96316
-longitude: -67.10861
+latitude: -17.96113
+longitude: -67.10804
 postcode: ""
 city: Oruro
-street: Calle León
+street: Calle Pagador
 housenumber: "314"
 phone: +591 67204679
 opening_hours: Mo-Sa 08:00-18:00
