--- a/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
@@ -1,11 +1,11 @@
-id: 7618663236
+id: 9784032962
 type: node
-latitude: -16.53028
-longitude: -68.15924
+latitude: -16.52663
+longitude: -68.15765
 postcode: ""
 city: Ciudad Satélite
 street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 09:00-18:00
+opening_hours: ""
 website: ""
