--- a/data/cities/cochabamba/j-d-medical.yml
+++ b/data/cities/cochabamba/j-d-medical.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: Calle José Miguel Lanza
 housenumber: N0434
 phone: +591 70728198
-opening_hours: ""
+opening_hours: Mo-Fr 09:00-18:30; Sa 09:00-13:00
 website: ""
