update content and data

--- a/data/cities/cochabamba/centro-comercial-vallejos.yml
+++ b/data/cities/cochabamba/centro-comercial-vallejos.yml
@@ -1,10 +1,10 @@
-id: 8597535066
+id: 878723765
 type: node
-latitude: -17.39153
-longitude: -66.15798
+latitude: -17.39456
+longitude: -66.15791
 postcode: ""
 city: Cochabamba
-street: Calle Mariano Baptista
+street: Calle Santivañez
 housenumber: ""
 phone: ""
 opening_hours: ""
