--- a/data/cities/santa-cruz-de-la-sierra/trans-copacabana-m-e-m-1.yml
+++ b/data/cities/santa-cruz-de-la-sierra/trans-copacabana-m-e-m-1.yml
@@ -1,10 +1,10 @@
-id: 5756943571
+id: 13256669581
 type: node
-latitude: -17.78568
-longitude: -63.14411
+latitude: -17.78896
+longitude: -63.1612
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida 15 de Agosto
+street: Avenida Intermodal
 housenumber: ""
 phone: ""
 opening_hours: ""
