--- a/data/cities/ciudad-satelite/venta-de-ropa-avenida-satelite.yml
+++ b/data/cities/ciudad-satelite/venta-de-ropa-avenida-satelite.yml
@@ -1,10 +1,10 @@
-id: 9362453550
+id: 4400066933
 type: node
-latitude: -16.5276
-longitude: -68.14851
+latitude: -16.52461
+longitude: -68.14964
 postcode: ""
 city: Ciudad Satélite
-street: Avenida del Policía
+street: Avenida Satélite
 housenumber: ""
 phone: ""
 opening_hours: ""
