--- a/data/cities/cochabamba/libreria-avenida-manuel-isidoro-belzu.yml
+++ b/data/cities/cochabamba/libreria-avenida-manuel-isidoro-belzu.yml
@@ -1,10 +1,10 @@
-id: 12544889638
+id: 8614022841
 type: node
-latitude: -17.44775
-longitude: -66.12538
+latitude: -17.39799
+longitude: -66.13986
 postcode: ""
 city: Cochabamba
-street: Avenida Siglo XX
+street: Avenida Manuel Isidoro Belzu
 housenumber: ""
 phone: ""
 opening_hours: ""
