--- a/data/cities/ciudad-satelite/peluqueria-avenida-del-policia-2.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-del-policia-2.yml
@@ -1,10 +1,10 @@
-id: 7573168877
+id: 9362453550
 type: node
-latitude: -16.53185
-longitude: -68.15317
+latitude: -16.5276
+longitude: -68.14851
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
+street: Avenida del Policía
 housenumber: ""
 phone: ""
 opening_hours: ""
