update content and data

--- a/data/cities/cochabamba/servicio-tecnico-celulares-viva.yml
+++ b/data/cities/cochabamba/servicio-tecnico-celulares-viva.yml
@@ -1,10 +1,10 @@
-id: 12544889638
+id: 3933396825
 type: node
-latitude: -17.44775
-longitude: -66.12538
+latitude: -17.37575
+longitude: -66.15683
 postcode: ""
 city: Cochabamba
-street: Avenida Siglo XX
+street: Avenida Santa Cruz
 housenumber: ""
 phone: ""
 opening_hours: ""
