--- a/data/cities/cochabamba/multifruit.yml
+++ b/data/cities/cochabamba/multifruit.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: Avenida Perú
 housenumber: "523"
 phone: +591 78596217
-opening_hours: Mo-Sa 07:30-18:00; Su 08:00-14:00
+opening_hours: Mo-Sa 07:30-18:00; Su 08:00-14:00; PH Off
 website: ""
