--- a/data/cities/la-paz-el-alto/tienda.yml
+++ b/data/cities/la-paz-el-alto/tienda.yml
@@ -1,11 +1,11 @@
-id: 5661952435
+id: 5661948413
 type: node
-latitude: -16.52497
-longitude: -68.17882
+latitude: -16.52414
+longitude: -68.18079
 postcode: ""
 city: La Paz - El Alto
-street: Calle 106 , Calle 134
+street: Avenida Ladislao Cabrera
 housenumber: ""
 phone: ""
-opening_hours: Mo-Su 08:00-22:00
+opening_hours: Mo-Su 08:00-21:00
 website: ""
