update content and data

--- a/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
@@ -1,10 +1,10 @@
-id: 7464674760
+id: 7618663236
 type: node
-latitude: -16.52701
-longitude: -68.15
+latitude: -16.53028
+longitude: -68.15924
 postcode: ""
 city: Ciudad Satélite
-street: Avenida del Policía
+street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 09:00-18:00
