update content and data

--- a/data/cities/cochabamba/importadora-tamiva.yml
+++ b/data/cities/cochabamba/importadora-tamiva.yml
@@ -4,7 +4,7 @@ latitude: -17.38976
 longitude: -66.15388
 postcode: ""
 city: Cochabamba
-street: Calle José Miguel Lanza
+street: Calle Guerrilleros José Miguel Lanza
 housenumber: ""
 phone: ""
 opening_hours: ""
