--- a/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
@@ -1,10 +1,10 @@
-id: 4400066933
+id: 9784159368
 type: node
-latitude: -16.52461
-longitude: -68.14964
+latitude: -16.52889
+longitude: -68.15864
 postcode: ""
 city: Ciudad Satélite
-street: Avenida Satélite
+street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
 opening_hours: ""
