--- a/data/cities/yucumo/llantero.yml
+++ b/data/cities/yucumo/llantero.yml
@@ -7,5 +7,5 @@ city: Yucumo
 street: 'RN3: San Borja-Yucumo'
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Su-Fr 08:00-18:00
 website: ""
