--- a/data/cities/cochabamba/baupercar-2.yml
+++ b/data/cities/cochabamba/baupercar-2.yml
@@ -1,10 +1,10 @@
-id: 8614022841
+id: 3636046995
 type: node
-latitude: -17.39799
-longitude: -66.13986
+latitude: -17.39811
+longitude: -66.15435
 postcode: ""
 city: Cochabamba
-street: Avenida Manuel Isidoro Belzu
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: ""
