--- a/data/cities/cochabamba/agencias-generales.yml
+++ b/data/cities/cochabamba/agencias-generales.yml
@@ -4,8 +4,8 @@ latitude: -17.39283
 longitude: -66.15405
 postcode: ""
 city: Cochabamba
-street: Calle Bolívar
+street: Calle Simon Bolívar
 housenumber: "520"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +591 4 4251062
+opening_hours: Mo-Fr 08:30-12:30; 14:30-18:30; Sa 08:30:12:30; Su,PH Off
+website: https://www.agsa.com/
