--- a/data/cities/la-paz/libreria-reloj-perez.yml
+++ b/data/cities/la-paz/libreria-reloj-perez.yml
@@ -1,10 +1,10 @@
-id: 10972348971
+id: 13345638961
 type: node
-latitude: -16.53808
-longitude: -68.07097
+latitude: -16.49446
+longitude: -68.13669
 postcode: ""
 city: La Paz
-street: Calle 26
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: ""
