--- a/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
@@ -1,11 +1,11 @@
-id: 9764723495
+id: 7618663236
 type: node
-latitude: -16.52418
-longitude: -68.15674
+latitude: -16.53028
+longitude: -68.15924
 postcode: ""
 city: Ciudad Satélite
 street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-18:00
 website: ""
