update content and data

--- a/data/cities/cochabamba/kiosco-antiguo.yml
+++ b/data/cities/cochabamba/kiosco-antiguo.yml
@@ -1,10 +1,10 @@
-id: 8614447799
+id: 2317966020
 type: node
-latitude: -17.39819
-longitude: -66.13704
+latitude: -17.38939
+longitude: -66.16158
 postcode: ""
 city: Cochabamba
-street: Avenida 9 de Abril
+street: Calle Hamiraya
 housenumber: ""
 phone: ""
 opening_hours: ""
