--- a/data/cities/ciudad-satelite/tienda-de-variedades.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades.yml
@@ -1,11 +1,11 @@
-id: 4553114026
+id: 4548572009
 type: node
-latitude: -16.52351
-longitude: -68.14981
+latitude: -16.53062
+longitude: -68.15236
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
-housenumber: ""
+street: Calle 29 C
+housenumber: "2103"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-18:00
 website: ""
