--- a/data/cities/cochabamba/kiosko-nuevo.yml
+++ b/data/cities/cochabamba/kiosko-nuevo.yml
@@ -1,10 +1,10 @@
-id: 8614447799
+id: 2317965969
 type: node
-latitude: -17.39819
-longitude: -66.13704
+latitude: -17.38894
+longitude: -66.16157
 postcode: ""
 city: Cochabamba
-street: Avenida 9 de Abril
+street: Calle Hamiraya
 housenumber: ""
 phone: ""
 opening_hours: ""
