update content and data

--- a/data/cities/cochabamba/la-despensa-natural.yml
+++ b/data/cities/cochabamba/la-despensa-natural.yml
@@ -4,7 +4,7 @@ latitude: -17.39383
 longitude: -66.15441
 postcode: ""
 city: Cochabamba
-street: Calle Sucre
+street: Calle José Antonio de Sucre
 housenumber: "477"
 phone: ""
 opening_hours: ""
