--- a/data/cities/cochabamba/fair-play-calle-jose-antonio-de-sucre.yml
+++ b/data/cities/cochabamba/fair-play-calle-jose-antonio-de-sucre.yml
@@ -4,7 +4,7 @@ latitude: -17.39406
 longitude: -66.15561
 postcode: ""
 city: Cochabamba
-street: Calle Sucre
+street: Calle José Antonio de Sucre
 housenumber: "359"
 phone: ""
 opening_hours: Mo-Sa 8:30-13:00,14:30-20:30; Su 10:00-14:00
