update content and data

--- a/data/cities/ciudad-satelite/internet-avenida-ciudad-satelite.yml
+++ b/data/cities/ciudad-satelite/internet-avenida-ciudad-satelite.yml
@@ -1,10 +1,10 @@
-id: 8346432152
+id: 7495667367
 type: node
-latitude: -16.52776
-longitude: -68.15141
+latitude: -16.5218
+longitude: -68.15667
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
+street: Avenida Ciudad Satélite
 housenumber: ""
 phone: ""
 opening_hours: ""
