--- a/data/cities/la-paz/caparazon-mall-center.yml
+++ b/data/cities/la-paz/caparazon-mall-center.yml
@@ -1,10 +1,10 @@
-id: 10949390924
+id: 1462346812
 type: node
-latitude: -16.4924
-longitude: -68.13488
+latitude: -16.49306
+longitude: -68.14542
 postcode: ""
 city: La Paz
-street: Avenida Sucre
+street: Avenida Buenos Aires
 housenumber: ""
 phone: ""
 opening_hours: ""
