--- a/data/cities/ciudad-satelite/tienda-de-barrio-calle-hno-e-morales.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-calle-hno-e-morales.yml
@@ -1,10 +1,10 @@
-id: 4564028099
+id: 4548572051
 type: node
-latitude: -16.52267
-longitude: -68.15093
+latitude: -16.52596
+longitude: -68.15064
 postcode: ""
 city: Ciudad Satélite
-street: Arturo Ballivian Otero
+street: Calle Hno. E. Morales
 housenumber: ""
 phone: ""
 opening_hours: ""
