--- a/data/cities/ciudad-satelite/tienda-de-barrio.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio.yml
@@ -1,10 +1,10 @@
-id: 4548572051
+id: 4564028099
 type: node
-latitude: -16.52596
-longitude: -68.15064
+latitude: -16.52267
+longitude: -68.15093
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hno. E. Morales
+street: Arturo Ballivian Otero
 housenumber: ""
 phone: ""
 opening_hours: ""
