--- a/data/cities/cochabamba/baupercar-avenida-dorbigny.yml
+++ b/data/cities/cochabamba/baupercar-avenida-dorbigny.yml
@@ -1,10 +1,10 @@
-id: 8614022841
+id: 3552731012
 type: node
-latitude: -17.39799
-longitude: -66.13986
+latitude: -17.38575
+longitude: -66.18562
 postcode: ""
 city: Cochabamba
-street: Avenida Manuel Isidoro Belzu
+street: Avenida d'Orbigny
 housenumber: ""
 phone: ""
 opening_hours: ""
