--- a/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
+++ b/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
@@ -1,10 +1,10 @@
-id: 3636046995
+id: 8597535066
 type: node
-latitude: -17.39811
-longitude: -66.15435
+latitude: -17.39153
+longitude: -66.15798
 postcode: ""
 city: Cochabamba
-street: ""
+street: Calle Mariano Baptista
 housenumber: ""
 phone: ""
 opening_hours: ""
