update content and data

--- a/data/cities/ciudad-satelite/internet-calle-hermano-e-morales.yml
+++ b/data/cities/ciudad-satelite/internet-calle-hermano-e-morales.yml
@@ -1,11 +1,11 @@
-id: 4548572052
+id: 7619955271
 type: node
-latitude: -16.52575
-longitude: -68.15055
+latitude: -16.5289
+longitude: -68.15191
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hno. E. Morales
+street: Calle Hermano E. Morales
 housenumber: ""
-phone: +591 70146392
+phone: ""
 opening_hours: Mo-Sa 09:00-18:00
 website: ""
