--- a/data/cities/ciudad-satelite/internet.yml
+++ b/data/cities/ciudad-satelite/internet.yml
@@ -1,11 +1,11 @@
-id: 7619955271
+id: 7495667367
 type: node
-latitude: -16.5289
-longitude: -68.15191
+latitude: -16.5218
+longitude: -68.15667
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
+street: Avenida Ciudad Satélite
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 09:00-18:00
+opening_hours: ""
 website: ""
