--- a/data/cities/ciudad-satelite/tienda-de-barrio.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio.yml
@@ -1,11 +1,11 @@
-id: 4564028099
+id: 4545693357
 type: node
-latitude: -16.52267
-longitude: -68.15093
+latitude: -16.52485
+longitude: -68.15703
 postcode: ""
 city: Ciudad Satélite
-street: Arturo Ballivian Otero
+street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-18:00
 website: ""
