--- a/data/cities/ciudad-satelite/tienda-de-barrio-arturo-ballivian-otero.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-arturo-ballivian-otero.yml
@@ -1,10 +1,10 @@
-id: 9784159368
+id: 4564028099
 type: node
-latitude: -16.52889
-longitude: -68.15864
+latitude: -16.52267
+longitude: -68.15093
 postcode: ""
 city: Ciudad Satélite
-street: Avenida Escalona y Aguero
+street: Arturo Ballivian Otero
 housenumber: ""
 phone: ""
 opening_hours: ""
