--- a/data/cities/santa-cruz-de-la-sierra/casa-elva-bolivia.yml
+++ b/data/cities/santa-cruz-de-la-sierra/casa-elva-bolivia.yml
@@ -1,11 +1,11 @@
-id: 13284211606
+id: 13283974845
 type: node
-latitude: -17.78741
-longitude: -63.18472
+latitude: -17.78738
+longitude: -63.18473
 postcode: ""
 city: Santa Cruz de la Sierra
 street: Calle Pari
 housenumber: "341"
-phone: +591 75006974
-opening_hours: Mo-Su 08:00-20:00
+phone: "+59175006974"
+opening_hours: Mo-Sa 08:00-18:00
 website: ""
