update content and data

--- a/data/cities/cochabamba/comercial-deco-hogar.yml
+++ b/data/cities/cochabamba/comercial-deco-hogar.yml
@@ -1,10 +1,10 @@
-id: 912257721
+id: 4574222676
 type: node
-latitude: -17.39408
-longitude: -66.17955
+latitude: -17.39395
+longitude: -66.17648
 postcode: ""
 city: Cochabamba
-street: Calle Gregorio Gamarra
+street: Avenida Carlos Blanco Galindo
 housenumber: ""
 phone: ""
 opening_hours: ""
