--- a/data/cities/cochabamba/radiadores-volcan.yml
+++ b/data/cities/cochabamba/radiadores-volcan.yml
@@ -1,10 +1,10 @@
-id: 912257721
+id: 13438103954
 type: node
-latitude: -17.39408
-longitude: -66.17955
+latitude: -17.39393
+longitude: -66.17758
 postcode: ""
 city: Cochabamba
-street: Calle Gregorio Gamarra
+street: Avenida Daniel Campos
 housenumber: ""
 phone: ""
 opening_hours: ""
