--- a/data/cities/cochabamba/comercial-tellez.yml
+++ b/data/cities/cochabamba/comercial-tellez.yml
@@ -1,10 +1,10 @@
-id: 4574222676
+id: 13438103969
 type: node
-latitude: -17.39394
-longitude: -66.17646
+latitude: -17.39395
+longitude: -66.17644
 postcode: ""
 city: Cochabamba
-street: Avenida Blanco Galindo
+street: Avenida Carlos Blanco Galindo
 housenumber: ""
 phone: ""
 opening_hours: ""
