--- a/data/cities/la-paz-el-alto/tienda.yml
+++ b/data/cities/la-paz-el-alto/tienda.yml
@@ -1,11 +1,11 @@
-id: 5661952479
+id: 5661948413
 type: node
 latitude: -16.52414
-longitude: -68.17978
+longitude: -68.18079
 postcode: ""
 city: La Paz - El Alto
-street: Calle 134
+street: Avenida Ladislao Cabrera
 housenumber: ""
 phone: ""
-opening_hours: Mo-Su 07:00-23:00
+opening_hours: Mo-Su 08:00-21:00
 website: ""
