update content and data

--- a/data/cities/la-paz/caparazon-mall-center.yml
+++ b/data/cities/la-paz/caparazon-mall-center.yml
@@ -5,7 +5,7 @@ longitude: -68.14542
 postcode: ""
 city: La Paz
 street: Avenida Buenos Aires
-housenumber: ""
+housenumber: "423"
 phone: ""
 opening_hours: ""
 website: ""
