--- a/data/cities/tarija/pescaderia.yml
+++ b/data/cities/tarija/pescaderia.yml
@@ -1,11 +1,11 @@
-id: 504465680
+id: 13479305040
 type: node
-latitude: -21.54291
-longitude: -64.71342
+latitude: -21.54302
+longitude: -64.71329
 postcode: "0601"
 city: Tarija
 street: Avenida Roberto Romero
 housenumber: ""
 phone: ""
-opening_hours: L-D 9:00 am - 22:00 pm
+opening_hours: Mo-Su 09:00-22:0
 website: ""
