--- a/data/cities/santa-cruz-de-la-sierra/boleteria-avenida-roca-y-coronado-2.yml
+++ b/data/cities/santa-cruz-de-la-sierra/boleteria-avenida-roca-y-coronado-2.yml
@@ -1,10 +1,10 @@
-id: 4403090712
+id: 11221071389
 type: node
-latitude: -17.76905
-longitude: -63.20109
+latitude: -17.78523
+longitude: -63.20903
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Tercer Anillo Interno
+street: Avenida Roca y Coronado
 housenumber: ""
 phone: ""
 opening_hours: ""
