update content and data

--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-hermano-e-morales-7.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-hermano-e-morales-7.yml
@@ -1,10 +1,10 @@
-id: 4564028099
+id: 8346432152
 type: node
-latitude: -16.52267
-longitude: -68.15093
+latitude: -16.52776
+longitude: -68.15141
 postcode: ""
 city: Ciudad Satélite
-street: Arturo Ballivian Otero
+street: Calle Hermano E. Morales
 housenumber: ""
 phone: ""
 opening_hours: ""
