--- a/data/cities/ciudad-satelite/tienda-de-barrio.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio.yml
@@ -1,11 +1,11 @@
-id: 4545693357
+id: 4564028099
 type: node
-latitude: -16.52485
-longitude: -68.15703
+latitude: -16.52267
+longitude: -68.15093
 postcode: ""
 city: Ciudad Satélite
-street: Avenida Escalona y Aguero
+street: Arturo Ballivian Otero
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 09:00-18:00
+opening_hours: ""
 website: ""
