update content and data

--- a/data/cities/cochabamba/ferreteria-gross-basta.yml
+++ b/data/cities/cochabamba/ferreteria-gross-basta.yml
@@ -4,7 +4,7 @@ latitude: -17.38438
 longitude: -66.16125
 postcode: ""
 city: Cochabamba
-street: Calle Teniente Arévalo
+street: Calle Teniente Antonio Arévalo
 housenumber: ""
 phone: ""
 opening_hours: ""
