--- a/data/cities/santa-cruz-de-la-sierra/hipermaxi-paurito.yml
+++ b/data/cities/santa-cruz-de-la-sierra/hipermaxi-paurito.yml
@@ -7,5 +7,5 @@ city: Santa Cruz de la Sierra
 street: Avenida Paurito
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Su 07:00-23:00
 website: ""
