update content and data

--- a/data/cities/ciudad-satelite/tienda-de-barrio-arturo-ballivian-otero.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-arturo-ballivian-otero.yml
@@ -1,10 +1,10 @@
-id: 8346432152
+id: 4564028099
 type: node
-latitude: -16.52776
-longitude: -68.15141
+latitude: -16.52267
+longitude: -68.15093
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hermano E. Morales
+street: Arturo Ballivian Otero
 housenumber: ""
 phone: ""
 opening_hours: ""
